[package]
name = "libsw"
version = "3.2.4"
authors = ["Ula Shipman <ula.hello@mailbox.org>"]
edition = "2021"
rust-version = "1.61.0"
description = "Comprehensive stopwatch library"
documentation = "https://docs.rs/libsw"
homepage = "https://crates.io/crates/libsw"
repository = "https://github.com/ulahello/libsw"
license = "MIT OR Apache-2.0"
keywords = ["stopwatch"]
categories = ["date-and-time", "no-std", "no-std::no-alloc"]

[dependencies]
coarsetime = { version = "0.1", default-features = false, optional = true }
quanta = { version = "0.11", default-features = false, optional = true }
time = { version = "0.3", features = ["std"], default-features = false, optional = true }
tokio = { version = "1", features = ["time"], default-features = false, optional = true }

[features]
default = ["std_instant", "std_systemtime"]
nightly = []
std = []
std_instant = ["std"]
std_systemtime = ["std"]
tokio = ["dep:tokio", "std"]
time = ["dep:time", "std"]
coarsetime = ["dep:coarsetime", "std"]
quanta = ["dep:quanta", "std"]

[package.metadata.docs.rs]
# build locally with:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly d --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
