[package]
name = "libsw"
version = "3.4.0"
authors = ["Ula Shipman <ula.hello@mailbox.org>"]
edition = "2021"
rust-version = "1.61.0"
description = "Comprehensive stopwatch library"
documentation = "https://docs.rs/libsw"
homepage = "https://crates.io/crates/libsw"
repository = "https://github.com/ulahello/libsw"
license = "MIT OR Apache-2.0"
keywords = ["stopwatch"]
categories = ["date-and-time", "no-std", "no-std::no-alloc"]

[badges.maintenance]
status = "passively-maintained"

[dependencies]
libsw-core = { version = "~0.3", default-features = false, features = [] }
coarsetime = { version = "~0.1", default-features = false, optional = true }
quanta = { version = "~0.12", default-features = false, optional = true }
time = { version = "~0.3", features = ["std"], default-features = false, optional = true }
tokio = { version = "~1", features = ["time"], default-features = false, optional = true }

[features]
default = ["std_instant", "std_systemtime"]
nightly = []
std = []
std_instant = ["std", "libsw-core/std"]
std_systemtime = ["std", "libsw-core/std"]
tokio = ["std", "dep:tokio", "libsw-core/tokio"]
coarsetime = ["std", "dep:coarsetime", "libsw-core/coarsetime"]
quanta = ["std", "dep:quanta", "libsw-core/quanta"]
time = ["std", "dep:time", "libsw-core/time"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[package.metadata.docs.rs]
# build locally with:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly d --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
